--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Nerd Pub Trivia!</h1>
 <p>
 Do you wish that pub trivia asked questions about subjects you care about, like science, books &amp; math? Wish no more,
-because we're running a Nerd Pub Trivia night! And, of course, no sports questions.
+because we're running a Nerd Pub Trivia night! 
 
 <p>
 <h1>Where And When?</h1>
@@ -25,6 +25,8 @@ in Kendall Square, Cambridge, on Wednesday, April 6th, at 7pm.
 
 <p>
 <img src="/images/male-nerd.png"><img src="/images/female-nerd.png">
+<p>
+<a href="http://twitter.com/NerdPubTrivia">Follow @NerdPubTrivia on Twitter!</a>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
