--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ because we're running a Nerd Pub Trivia night!
 <h1>Where And When?</h1>
 <p>
 <a href="http://www.thinktankcambridge.com/">Think Tank</a>
-in Kendall Square, Cambridge, on Wednesday, May 4th, at 7pm. 
+in Kendall Square, Cambridge, on Wednesday, June 1st, at 7pm. 
 
 <p>
 <img src="/images/male-nerd.png"><img src="/images/female-nerd.png">
