--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ because we're running a Nerd Pub Trivia night!
 <p>
 <h1>Where And When?</h1>
 <p>
-<a href="http://www.thinktankcambridge.com/">Think Tank</a>
-in Kendall Square, Cambridge, on Wednesday, May 2nd, at 7pm. 
+<a href="http://firebrandsaints.com/">Firebrand Saints</a>
+in Kendall Square, Cambridge, on Tuesday, July 10th, at 7pm. 
 
 <p>
 <img src="/images/male-nerd.png"><img src="/images/female-nerd.png">
