Updated page with 8/11 info

--- a/index.html
+++ b/index.html
@@ -15,21 +15,29 @@
 <h1>Nerd Pub Trivia!</h1>
 <p>
 Do you wish that pub trivia asked questions about subjects you care about, like science, books &amp; math? Wish no more,
-because we're running a Nerd Pub Trivia night! 
-
+because we're running a Nerd Pub Trivia night!
+</p>
+<p>
+The legendary-ish Nerd Pub Trivia returns this summer for a one time nerdy blow-out.  Recapture the geeky lifestyle of
+the early 2010's at Boston's least popular trivia night!
+</p>
 <p>
 <h1>Where And When?</h1>
+</p>
 <p>
 <a href="http://tommydoyles.com/locations/kendall-square/">Tommy Doyle's</a>
-in Kendall Square, Cambridge, on Monday, April 1st, at 6:45pm. 
+in Kendall Square, Cambridge, on Monday, August 11th, at 6:45pm. 
+</p>
 <p>
 We'll be starting at 6:45, but if you arrive a few minutes late we'll make it such that you can catch up.
 Join us!
-
+</p>
 <p>
 <img src="/images/male-nerd.png"><img src="/images/female-nerd.png">
+</p>
 <p>
 <a href="http://twitter.com/NerdPubTrivia">Follow @NerdPubTrivia on Twitter!</a>
+</p>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
